# nonzero_ext

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: ci.yml
src/: lib.rs  literals.rs  time.rs  types.rs
tests/: compiletest.rs  macro.rs
tests/compile-fail/: immoral_math.stderr  negative_i32.rs  negative_i32.stderr  zero_u8.rs  zero_u8.stderr  zero_usize.rs  zero_usize.stderr
tests/compile-fail_1.56/: issue-17--adverse-conditions.stderr
tests/compile-fail_1.62/: issue-17--adverse-conditions.stderr
