[package]
name = "nonzero_ext"
version = "0.2.1-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "Apache-2.0"
repository = "https://github.com/antifuchs/nonzero_ext"
readme = "README.md"
description = "Extensions and additional traits for non-zero integer types"
documentation = "https://docs.rs/nonzero_ext"

[badges]
circle-ci = { repository = "antifuchs/nonzero_ext", branch = "master" }
maintenance = { status = "passively-maintained" }

[features]
default = ["std", "time"]
std = []
time = []

[package.metadata.template_ci]
# We don't care about nightly with its regular/unstable changes to
# diagnostics, but beta could potentially break compatibility.
versions = ["stable", "beta"]

[package.metadata.template_ci.clippy]
allow_failure = false

[dependencies]

[dev-dependencies]
trybuild = "1.0"
rustversion = "1.0.2"
